--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module"src="./
-   
-    src/main.jsx"></script>
+    <script type="module"src="./src/main.jsx"></script>
     .jsx"></script>
   </body>
 </html>
